ui(import): add link to main wallet view to import success page

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -184,7 +184,8 @@
     },
     "success": {
       "title": "Wallet imported successfully!",
-      "subtitle": "The rescanning process now searches for your balance. Please be patient, this may take some time."
+      "subtitle": "The rescanning process started searching for your funds. Please be patient, this may take some time.",
+      "text_button_submit": "Continue"
     },
     "error_importing_failed": "Error while importing the wallet. Reason: {{ reason }}"
   },
