--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -182,6 +182,11 @@
       "text_button_submit": "Import",
       "text_button_submitting": "Importing..."
     },
+    "success": {
+      "title": "Wallet imported successfully!",
+      "subtitle": "The rescanning process started searching for your funds. Please be patient, this may take some time.",
+      "text_button_submit": "Continue"
+    },
     "error_importing_failed": "Error while importing the wallet. Reason: {{ reason }}"
   },
   "current_wallet": {
