--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -290,8 +290,8 @@
     "feedback_reused_address": "This address is already used. To preserve your privacy please choose another one.",
     "label_source_jar": "Send from",
     "title_jar_selector": "Select a jar from your wallet to send the funds to.",
-    "label_amount": "Amount in sats",
-    "placeholder_amount": "Enter amount...",
+    "label_amount_input": "Amount",
+    "placeholder_amount_input": "Enter amount in sats or BTC...",
     "feedback_invalid_amount": "Please provide a valid amount.",
     "sending_options": "Sending options",
     "toggle_coinjoin": "Send as collaborative transaction",
