ui(Earn): minsize as UniversalBitcoinAmountInput

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -387,7 +387,8 @@
     "label_abs_fee": "Absolute fee {{ fee }}",
     "description_abs_fee": "The fee to charge others, as an absolute amount denominated in sats.",
     "feedback_invalid_abs_fee": "Invalid absolute fee.",
-    "label_min_amount": "Minimum amount in sats",
+    "label_min_amount_input": "Minimum amount",
+    "placeholder_min_amount_input": "Enter a minimum amount in sats or BTC...",
     "feedback_invalid_min_amount": "Please provide a minimum amount.",
     "button_start": "Start Earning!",
     "button_stop": "Stop",
