feat: align amount input fields (#711)
* ui(amount): add bitcoin amount input component

* ui(amount): format display value always in btc

* ui(Send): adapt amount field label and placeholder

* ui(Send): highlight sending options on input errors

* chore: do not display amount unit on empty input

* test: add tests for BitcoinAmountInput

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -290,8 +290,8 @@
     "feedback_reused_address": "This address is already used. To preserve your privacy please choose another one.",
     "label_source_jar": "Send from",
     "title_jar_selector": "Select a jar from your wallet to send the funds to.",
-    "label_amount": "Amount in sats",
-    "placeholder_amount": "Enter amount...",
+    "label_amount_input": "Amount",
+    "placeholder_amount_input": "Enter amount in sats or BTC...",
     "feedback_invalid_amount": "Please provide a valid amount.",
     "sending_options": "Sending options",
     "toggle_coinjoin": "Send as collaborative transaction",
@@ -360,7 +360,9 @@
     "button_copy_address": "Copy",
     "text_copy_address_confirmed": "Copied",
     "button_settings": "Receive options",
-    "label_amount": "Amount to request in sats",
+    "label_source_jar": "Receive to",
+    "label_amount_input": "Amount",
+    "placeholder_amount_input": "Enter amount in sats or BTC...",
     "feedback_invalid_amount": "Please provide a valid amount.",
     "button_new_address": "Get new address",
     "text_getting_address": "Getting new address"
@@ -385,7 +387,8 @@
     "label_abs_fee": "Absolute fee {{ fee }}",
     "description_abs_fee": "The fee to charge others, as an absolute amount denominated in sats.",
     "feedback_invalid_abs_fee": "Invalid absolute fee.",
-    "label_min_amount": "Minimum amount in sats",
+    "label_min_amount_input": "Minimum amount",
+    "placeholder_min_amount_input": "Enter a minimum amount in sats or BTC...",
     "feedback_invalid_min_amount": "Please provide a minimum amount.",
     "button_start": "Start Earning!",
     "button_stop": "Stop",
