add translation entry

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -32,6 +32,7 @@
   },
   "app": {
     "alert_no_connection": "No connection to backend: {{ connectionError }}",
+    "alert_no_connection_details": "Unable to access <1>this URL</1>. Please confirm that the backend is running and see <2>this link</2> for more information.",
     "alert_rescan_in_progress": "Rescanning in progress..."
   },
   "navbar": {
