--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -697,5 +697,14 @@
       "utxo_detail_label_locktime": "Locktime",
       "utxo_detail_label_status": "Address status"
     }
+  },
+  "showUtxos": {
+    "show_utxo_title": "Select UTXOS to send",
+    "show_utxo_subtitle": "The following UTXOs are selected to be sent. Modify if needed.",
+    "alert_for_unfreeze_utxos": "At least one UTXO is required to perform a transaction",
+    "alert_for_time_locked": "Selected UTXO is Time Locked till",
+    "alert_for_empty_utxos": "Please Unfreeze UTXOs to send",
+    "back_button": "Back",
+    "next_button": "Next"
   }
 }
