ui:(FB) back button instead of cancel button

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -450,7 +450,7 @@
       "text_unfreezing": "Unfreezing...",
       "select_date": {
         "text_primary_button": "Next",
-        "text_secondary_button": "Cancel",
+        "text_secondary_button": "Back",
         "form_label_year": "Year",
         "form_label_month": "Month",
         "description": "Fidelity bond expiration date:",
@@ -458,13 +458,13 @@
       },
       "select_jar": {
         "text_primary_button": "Next",
-        "text_secondary_button": "Cancel",
+        "text_secondary_button": "Back",
         "description": "Select a jar to fund the fidelity bond from."
       },
       "select_utxos": {
         "text_primary_button": "Next",
         "text_primary_button_unsafe": "Select potentially less private UTXOs",
-        "text_secondary_button": "Cancel",
+        "text_secondary_button": "Back",
         "description": "Select one or more UTXOs from Jar {{ jar }} to use for the fidelity bond.",
         "utxo_card": {
           "confirmations": "{{ confs }} Confirmations",
@@ -477,7 +477,7 @@
         "text_primary_button": "Freeze UTXOs",
         "text_primary_button_all_frozen": "Review bond configuration",
         "text_primary_button_error": "Try again",
-        "text_secondary_button": "Cancel",
+        "text_secondary_button": "Back",
         "description_selected_utxos": "Selected UTXOs:",
         "description_unselected_utxos": "The following UTXOs will not be used for the fidelity bond:",
         "description_selected_utxos_to_freeze": "They will be frozen to remain in Jar {{ jar }}. You can unfreeze them anytime after creating the bond."
@@ -486,7 +486,7 @@
         "text_primary_button": "Create fidelity bond",
         "text_primary_button_unsafe": "Create fidelity bond with potentially less private UTXOs",
         "text_primary_button_error": "Try again",
-        "text_secondary_button": "Cancel",
+        "text_secondary_button": "Back",
         "description": "You configured the fidelity bond as follows:",
         "label_lock_date": "Locked until",
         "label_jar": "Funded from",
