Implemented suggested changes - Fixed sweep amount - Refactored code (naming) - Removed unnecessary warnings - Added minor improvements - Fixed a few bugs

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -703,6 +703,7 @@
     "selected_utxos": "Selected UTXOs",
     "show_utxo_title": "Select UTXOs to be considered",
     "show_utxo_subtitle": "The following UTXOs are considered in the transaction. Every unselected UTXO will be frozen and can be unfrozen later on.",
+    "show_utxo_subtitle_when_allutxos_are_frozen": "The following UTXOs are frozen. Please select them to be considered in the transaction.",
     "alert_for_unfreeze_utxos": "At least one UTXO is required to perform a transaction",
     "alert_for_time_locked": "Selected UTXO is Time Locked till",
     "alert_for_empty_utxos": "Please Unfreeze UTXOs to send"
