chore(sweep): wording in confirm modal

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -663,7 +663,7 @@
     },
     "confirm_modal": {
       "title": "Start Scheduled Sweep",
-      "body": "Are you sure you want to start the scheduled sweep?"
+      "body": "Are you sure you want to start a scheduled sweep?"
     }
   },
   "modal": {
