ui(JarDetailsView): normal font for disabled info text

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -720,7 +720,7 @@
       "utxo_detail_label_is_frozen": "Is frozen",
       "utxo_detail_label_locktime": "Locktime",
       "utxo_detail_label_status": "Address status",
-      "subtitle_options_disabled": "A Maker/Taker operation is in progress. Some operations are disabled"
+      "text_actions_disabled": "A maker or taker operation is in progress. Some operations are disabled."
     }
   },
   "show_utxos": {
