--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -720,7 +720,9 @@
       "utxo_detail_label_is_frozen": "Is frozen",
       "utxo_detail_label_locktime": "Locktime",
       "utxo_detail_label_status": "Address status",
-      "text_actions_disabled": "A maker or taker operation is in progress. Some operations are disabled."
+      "text_actions_disabled": "Some operations are disabled.",
+      "text_actions_disabled_maker_running": "Earn is active. Some operations are disabled.",
+      "text_actions_disabled_taker_running": "A collaborative transaction is currently in progress. Some operations are disabled."
     }
   },
   "show_utxos": {
