--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -719,7 +719,10 @@
       "utxo_detail_label_confirmations": "Confirmations",
       "utxo_detail_label_is_frozen": "Is frozen",
       "utxo_detail_label_locktime": "Locktime",
-      "utxo_detail_label_status": "Address status"
+      "utxo_detail_label_status": "Address status",
+      "text_actions_disabled": "Some operations are disabled.",
+      "text_actions_disabled_maker_running": "Earn is active. Some operations are disabled.",
+      "text_actions_disabled_taker_running": "A collaborative transaction is currently in progress. Some operations are disabled."
     }
   },
   "show_utxos": {
