security_for_seed_phrase_request

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -229,6 +229,11 @@
     "button_switch_wallet": "Switch wallet",
     "error_loading_seed_failed": "Could not retrieve seed phrase.",
     "seed_modal_info_text": "Please write down your seed phrase and password! Without this information you will not be able to access and recover your wallet!",
+    "verify_password": "Enter your wallet Password",
+    "enter_password": "Enter Password",
+    "confirm": "Unlock",
+    "password_required": "Please Enter Password",
+    "error_invalid_password": "Invaild Password",
     "documentation": "Documentation",
     "github": "GitHub",
     "matrix": "Matrix",
