russian translation fixed

--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -44,26 +44,26 @@
     "tab_receive": "Получить",
     "tab_earn": "Заработать",
     "tab_sweep": "Перенести",
-    "joining_in_progress": "Микширование",
+    "joining_in_progress": "Перемешивание",
     "menu_mobile": "Меню",
-    "menu_mobile_settings": "НАстройки"
+    "menu_mobile_settings": "Настройки"
   },
   "footer": {
     "warning": "Это бета-версия ПО.<br /><1>Прочитайте перед использованием.</1>",
     "warning_alert_title": "Внимание",
     "warning_alert_text": "В отличие от JoinMarket, который опробован и протестирован сообществом, Jam <2>находится в стадии бета-тестирования</2>. Используйте с осторожностью.",
     "warning_alert_button_ok": "Ознакомился, мне похер",
-    "cheatsheet": "Cheatsheet",
+    "cheatsheet": "Шпаргалка",
     "websocket_connected": "Websocket connected",
     "websocket_disconnected": "Websocket disconnected",
     "orderbook": "Список предложений"
   },
   "onboarding": {
     "splashscreen_title": "Jam",
-    "splashscreen_subtitle": "Privacy for Yourself and Others",
+    "splashscreen_subtitle": "Конфиденциальность для всех и каждого",
     "splashscreen_button_get_started": "Приступаем",
     "splashscreen_button_skip_intro": "Пропустить вступление",
-    "splashscreen_description_line1": "Your wallet, your coins.",
+    "splashscreen_description_line1": "Ваш кошелек, ваши монеты.",
     "splashscreen_description_line2": "100% open-source & open-design.",
     "splashscreen_warning_title": "Внимание",
     "splashscreen_warning_text": "В отличие от JoinMarket, который опробован и протестирован сообществом, Jam <2>находится в стадии бета-тестирования</2>. Используйте с осторожностью. Вы можете <1>Помочь нам улучшить проект на GitHub</1>.",
@@ -94,7 +94,7 @@
     "report_bug": "Пожалуйста, если вам нетрудно, <2>откройте issue на GitHub</2> для исправления ошибки в следующих версиях."
   },
   "wallets": {
-    "title": "ваши Кошельки",
+    "title": "Ваши кошельки",
     "subtitle_no_wallets": "Похоже, у вас пока нет кошелька.",
     "text_loading": "Загружаю кошельки",
     "button_new_wallet": "Создать новый кошелек",
@@ -128,11 +128,11 @@
     "title_wallet_created": "Кошелек создан!",
     "subtitle_wallet_created": "Пожалуйста, запишите вашу сид-фразу и пароль! Без этой информации вы не сможете получить доступ и восстановить свой кошелек!",
     "alert_other_wallet_unlocked": "Сейчас <1>{{ walletName }}</1> активен. Необходимо его заблокировать. <3>Назад</3>.",
-    "alert_rescan_in_progress": "В настоящее время выполняется повторное сканирование timechain. Пожалуйста, дождитесь завершения процесса и повторите попытку. <1>Назад</1>.",
+    "alert_rescan_in_progress": "В настоящее время выполняется повторное сканирование блокчейна. Пожалуйста, дождитесь завершения процесса и повторите попытку. <1>Назад</1>.",
     "feedback_valid": "Норм!",
-    "label_wallet_name": "имя кошелька",
+    "label_wallet_name": "Имя кошелька",
     "placeholder_wallet_name": "Ваш кошелек...",
-    "feedback_invalid_wallet_name": "Пожалуйста, выберите допустимое имя кошелька: используйте только буквы, цифры, подчеркивания и дефисы..",
+    "feedback_invalid_wallet_name": "Пожалуйста, выберите допустимое имя кошелька: используйте только буквы, цифры, подчеркивания и дефисы.",
     "feedback_wallet_name_already_exists": "Пожалуйста, выберите другое имя кошелька. Это уже используется.",
     "label_password": "Пароль для разблокировки кошелька",
     "placeholder_password": "Выберите надежный пароль...",
@@ -147,37 +147,37 @@
     "confirmation_label_wallet_name": "Имя кошелька",
     "confirmation_label_password": "Пароль",
     "confirmation_toggle_reveal_info": "Раскрыть конфиденциальную информацию",
-    "confirmation_toggle_info_written_down": "Я записал информацию выше..",
+    "confirmation_toggle_info_written_down": "Я записал информацию выше.",
     "confirmation_button_fund_wallet": "Пополнить кошелек",
     "confirm_backup_title": "Подтвердите резервную копию сид фразы",
-    "confirm_backup_subtitle": "Введите каждое слово в последовательном порядке..",
+    "confirm_backup_subtitle": "Введите каждое слово в последовательном порядке.",
     "feedback_seed_confirmed": "Подтверждена исходная фраза.",
     "back_button": "Назад",
     "skip_button": "Пропустить",
     "next_button": "След",
     "placeholder_seed_word_input": "Слово",
-    "hint_duration_text": "Пожалуйста, проявите терпение, это может занять несколько минут.."
+    "hint_duration_text": "Пожалуйста, проявите терпение, это может занять несколько минут."
   },
   "import_wallet": {
     "alert_other_wallet_unlocked": "Сейчас <1>{{ walletName }}</1> активен. Необходимо его заблокировать. <3>Назад</3>.",
-    "alert_rescan_in_progress": "В настоящее время выполняется повторное сканирование timechain. Пожалуйста, дождитесь завершения процесса и повторите попытку. <1>Назад</1>.",
+    "alert_rescan_in_progress": "В настоящее время выполняется повторное сканирование блокчейна. Пожалуйста, дождитесь завершения процесса и повторите попытку. <1>Назад</1>.",
     "wallet_details": {
       "title": "Импорт кошелька",
       "text_button_submit": "Далее",
       "text_button_submitting": "Далее"
     },
     "import_details": {
-      "title": "Пожалуйста, введите вашу мнемоническую фразу!",
-      "subtitle": "Введите мнемоническую фразу одну за другой в правильном порядке и запустите процесс повторного сканирования..",
-      "feedback_invalid_menmonic_phrase": "Пожалуйста, укажите правильную мнемоническую фразу",
+      "title": "Пожалуйста, введите вашу сид фразу!",
+      "subtitle": "Введите мнемоническую фразу одну за другой в правильном порядке и запустите процесс повторного сканирования.",
+      "feedback_invalid_menmonic_phrase": "Пожалуйста, укажите правильную сид фразу",
       "import_options": "Параметры импорта",
       "label_blockheight": "Повторное сканирование с блока",
       "description_blockheight": "Высота блока, с которой начинается процесс повторного сканирования для поиска ваших средств. Чем раньше был создан кошелек, тем ниже должно быть это значение.",
       "feedback_invalid_blockheight": "Пожалуйста, укажите допустимое значение в диапазоне {{ min }} и текущей высота блока.",
       "label_gaplimit": "Лимит импорта адресов",
-      "description_gaplimit": "Количество адресов, импортируемых в jar. Установите на самый высокий индекс адреса, используемый в любом из jar. Увеличьте это число, если ваш кошелек интенсивно используется.",
+      "description_gaplimit": "Количество адресов, импортируемых в банку. Установите на самый высокий индекс адреса, используемый в любой из банок. Увеличьте это число, если ваш кошелек интенсивно используется.",
       "feedback_invalid_gaplimit": "Пожалуйста, укажите допустимое значение в диапазоне {{ min }} и {{ max }}.",
-      "alert_high_gaplimit_value": "Указанное значение приводит к импорту большого количества адресов, что может привести к снижению производительности и скорости реагирования..",
+      "alert_high_gaplimit_value": "Указанное значение приводит к импорту большого количества адресов, что может привести к снижению производительности и скорости реагирования.",
       "text_button_submit": "Просмотр",
       "text_button_submitting": "Просмотр"
     },
@@ -273,9 +273,9 @@
   },
   "rescan_chain": {
     "title": "Повторное сканирование цепочки блоков (экспериментальная функция)",
-    "subtitle": "Повторно просканируйте локальную цепочку времени на предмет транзакций, связанных с кошельком..",
+    "subtitle": "Повторно просканируйте локальную цепочку блоков на предмет транзакций, связанных с кошельком.",
     "label_blockheight": "Высота блока посторного сканирования",
-    "description_blockheight": "Высота блока, на которой начинается процесс повторного сканирования..",
+    "description_blockheight": "Высота блока, на которой начинается процесс повторного сканирования.",
     "error_rescanning_failed": "Ошибка при запуске процесса повторного сканирования. Причина: {{ reason }}",
     "feedback_invalid_blockheight": "Пожалуйста, укажите допустимое значение в диапазоне {{ min }} и текущей высотой блока.",
     "text_button_submit": "Хапустить повторное сканирование",
@@ -291,10 +291,10 @@
     "subtitle": "Используйте совместную транзакцию для повышения безопасности и конфиденциальности.",
     "label_num_collaborators": "Количество соавторов: {{ numCollaborators }}",
     "input_num_collaborators_placeholder": "Другое",
-    "description_num_collaborators": "Большее число лучше для конфиденциальности, но также увеличивает комиссию за транзакцию..",
+    "description_num_collaborators": "Большее число лучше для конфиденциальности, но также увеличивает комиссию за транзакцию.",
     "error_invalid_num_collaborators": "Пожалуйста, используйте значение между {{ minNumCollaborators }} и {{ maxNumCollaborators }} соавторов.",
     "taker_error_message_max_fees_config_missing": "Переменные конфигурации 'max_cj_fee_rel' и 'max_cj_fee_abs' должны быть установлены в joinmarket.cfg для отправки совместных транзакций. Рассмотрите возможность добавления их в конфигурацию вручную.",
-    "direct_payment_error_message_bad_request": "Пожалуйста, внимательно проверьте введенные вами данные..",
+    "direct_payment_error_message_bad_request": "Пожалуйста, внимательно проверьте введенные вами данные.",
     "error_loading_min_makers_failed": "Загрузка значения конфигурации «minimum_makers» не удалась.",
     "alert_payment_successful": "Платеж успешен: отправлено {{ amount }} sats получателю {{ address }} в транзакции {{ txid }}.",
     "text_maker_running": "Заработок активен. Остановите службу, чтобы отправлять совместные транзакции.",
@@ -311,7 +311,7 @@
     "feedback_invalid_amount": "Пожалуйста, укажите действительную сумму.",
     "sending_options": "Параметры отправки",
     "toggle_coinjoin": "Отправить как совместную транзакцию",
-    "toggle_coinjoin_subtitle": "Совместные транзакции улучшают конфиденциальность вас и других.",
+    "toggle_coinjoin_subtitle": "Совместные транзакции улучшают конфиденциальность вас и других пользователей.",
     "label_tx_fees": "Комиссия за майнинг",
     "button_send": "Отправить",
     "button_send_despite_warning": "похер на предупреждения, отправить!",
@@ -338,8 +338,8 @@
       "title": "Подтвердить платеж",
       "label_amount": "Сумма",
       "text_sweep_balance": "Перенос (<1></1>)",
-      "text_sweep_info_popover": "Точная сумма транзакции может быть рассчитана JoinMarket только на момент совершения транзакции..",
-      "label_recipient": "получатель",
+      "text_sweep_info_popover": "Точная сумма транзакции может быть рассчитана JoinMarket только на момент совершения транзакции.",
+      "label_recipient": "Получатель",
       "label_source_jar": "Отправить из",
       "text_source_jar": "Банка {{ jarId }}",
       "label_num_collaborators": "Соавторы",
@@ -360,7 +360,7 @@
       "description_selected_utxos_other": "В транзакцию будут включены следующие UTXO: "
     },
     "confirm_abort_modal": {
-      "title": "Прервать платеж",
+      "title": "Прервать транзакцию",
       "text_body": "Вы уверены, что хотите прервать совместную транзакцию?"
     },
     "coinjoin_precondition": {
@@ -377,7 +377,7 @@
   },
   "receive": {
     "title": "Получить",
-    "subtitle": "Отправьте саты на указанный ниже адрес, чтобы пополнить свой кошелек..",
+    "subtitle": "Отправьте саты на указанный ниже адрес, чтобы пополнить свой кошелек.",
     "error_loading_address_failed": "Невозможно получить новый адрес.",
     "error_copy_address_failed": "Не удалось скопировать адрес.",
     "button_copy_address": "Скопировать",
@@ -394,7 +394,7 @@
     "title": "Заработать",
     "subtitle": "Предлагая ликвидность рынку, вы улучшаете конфиденциальность себя и других. Ваши саты всегда остаются под вашим контролем и никогда не покидают ваш кошелек.",
     "market_explainer": "Вы можете выбрать, сколько вы хотите взимать за свое предложение. Обратите внимание, что вы участвуете и конкурируете на открытом рынке — нет гарантии, что другие участники рынка примут ваше предложение. Выбор для совместной транзакции может занять некоторое время. Низкие сборы увеличивают ваши шансы.",
-    "alert_empty_report": "Отчет пуст..",
+    "alert_empty_report": "Отчет пуст.",
     "text_report_length": "Показано {{ visibleLines }} из {{ linesWithoutHeader }} записей",
     "error_loading_report_failed": "Не удалось загрузить отчет о доходах.",
     "alert_starting": "Сервис стартует.",
@@ -626,7 +626,7 @@
     "placeholder_search": "Поиск",
     "text_orderbook_filter_count": "{{ filterCount }} записей соответствуют заданным критериям поиска",
     "label_highlight_own_orders": "Выделите мои предложения",
-    "text_highlight_own_orders_subtitle": "Может потребоваться некоторое время, чтобы ваше предложение и ваш Fidelity Bond появились в вашей локальной книге заказов..",
+    "text_highlight_own_orders_subtitle": "Может потребоваться некоторое время, чтобы ваше предложение и ваш Fidelity Bond появились в вашей локальной книге заказов.",
     "label_pin_to_top_own_orders": "Закрепить мои предложения",
     "text_pin_to_top_own_orders_subtitle": "Отображает ваши предложения в верхней части таблицы",
     "table": {
@@ -644,7 +644,7 @@
     "title": "Плановая очистка (экспериментальная)",
     "subtitle": "Выполняйте несколько транзакций, используя случайные суммы и временные интервалы, чтобы повысить конфиденциальность себя и других. Каждая запланированная транзакция является совместной транзакцией.",
     "error_starting_schedule_failed": "Не удалось запустить планировщик.",
-    "error_stopping_schedule_failed": "Не удалось остановить планировщик..",
+    "error_stopping_schedule_failed": "Не удалось остановить планировщик.",
     "complete_wallet_title": "Весь кошелек",
     "complete_wallet_subtitle": "При этом будут использованы все ваши незамороженные средства.",
     "description_destination_addresses": "Планировщик отправит все доступные средства в несколько пунктов назначения, разделив их на случайные части.",
@@ -679,7 +679,7 @@
     },
     "confirm_modal": {
       "title": "Начать запланированную очистку",
-      "body": "Вы уверены, что хотите начать запланированную проверку??"
+      "body": "Вы уверены, что хотите начать запланированную очистку?"
     }
   },
   "modal": {
@@ -729,8 +729,8 @@
     "text_select_utxos_tooltip": "Выбрать UTXOs",
     "title": "Выбрать доступные UTXOs",
     "subtitle_zero": "Пожалуйста, выберите один или несколько UTXO для возможного включения в транзакцию.",
-    "subtitle_one": "Выбранный UTXO имеет право быть включенным в транзакцию..",
-    "subtitle_other": "Выбранные UTXO имеют право на включение в транзакцию..",
-    "text_subtitle_addon": "Невыбранные UTXO будут заморожены и могут быть разморожены позже в любое время.."
+    "subtitle_one": "Выбранный UTXO имеет право быть включенным в транзакцию.",
+    "subtitle_other": "Выбранные UTXO имеют право на включение в транзакцию.",
+    "text_subtitle_addon": "Невыбранные UTXO будут заморожены и могут быть разморожены позже в любое время."
   }
 }
